# library

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_wheels.yml  build_wheels_UNIX.yml
data-depth/: MANIFEST.in  README.md  setup.py
data-depth/src/data-depth/: depth-routines.py
data_depth.egg-info/: PKG-INFO  SOURCES.txt
depth/: __init__.py  conf.py  index.rst
depth-package/: build_wheels.yml  pyproject.toml  setup.py
depth-package/depth/: __init__.py  index.rst
depth-package/depth.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
depth-package/depth/multivariate/: Aprojection.py  Aprojection.rst  BetaSkeleton.py  BetaSkeleton.rst  Depth_approximation.py  Halfspace.py  L2.py  Mahalanobis.py  Potential.py  Projection.py  Qhpeeling.py  Qhpeeling.rst  Simplicial.py  SimplicialVolume.py  Spatial.py  Zonoid.py  __init__.py  credits.rst  introduction.rst  (+1 more)
depth/model/: Cexpchullstar.rst  DepthEucl.py  DepthEucl.rst  DepthFunc.py  L2.rst  MultDepth.py  Projection.rst  Simplicial.rst  SimplicialVolume.rst  Spatial.rst  __init__.py  credits.rst  depthModel.py  docHelp.py  introduction.rst  modules.rst
depth/multivariate/: Aprojection.py  BetaSkeleton.py  Cexpchull.py  Cexpchull.rst  Cexpchullstar.py  Depth_approximation.py  Geometrical.py  Halfspace.py  L2.py  MCD.py  Mahalanobis.py  Potential.py  Projection.py  Qhpeeling.py  Simplicial.py  SimplicialVolume.py  Spatial.py  Zonoid.py  __init__.py  credits.rst  import_CDLL.py  plot.py  plot.rst
depth/plotDepth/: __init__.py  depth_mesh.py  depth_plot2d.py  plotDepth.py
depth/src/: ACA_wrapper.cpp  ACA_wrapper.h  Common.cpp  Common.h  DataStructures.h  HD.h  LensDepth.cpp  MCD.cpp  MCD.h  MD.cpp  MD.h  Mahalanobis.h  Makefile.txt  Matrix.cpp  Matrix.h  OjaDepth.cpp  PD.h  ProjectionDepth.cpp  ProjectionDepths.cpp  ProjectionDepths.h  SimplicialDepth.cpp  WMD.cpp  WMD.h  ZD.cpp  abs_matrix.cu  abs_matrix.cuh  auxLinAlg.cpp  auxLinAlg.h  ddalpha.cpp  depth_wrapper.cpp  depth_wrapper.h  stdafx.cpp  stdafx.h
docs/: DepthEucl.rst  DepthFunc.rst  DepthPlot.rst  Examples.rst  conf.py  credits.rst  index.rst  introduction.rst  modules.rst  sg_execution_times.rst
docs/notions/: ACA.rst  Aprojection.rst  BetaSkeleton.rst  Cexpchull.rst  Cexpchullstar.rst  Geometrical.rst  Halfspace.rst  L2.rst  Mahalanobis.rst  Potential.rst  Projection.rst  Qhpeeling.rst  Simplicial.rst  SimplicialVolume.rst  Spatial.rst  Zonoid.rst  change_dataset.rst
docs/plot/: depth_mesh.rst  depth_plot2d.rst
docs/source/: depth.model.rst  depth.plotDepth.rst  depth.rst
examples/: README.txt  plot_ACA.py  plot_CexpchullDepth.py  plot_CexpchullStarDepth.py  plot_DepthCuda.py  plot_DepthFunc.py  plot_L2Depth.py  plot_aprojDepth.py  plot_betaSkelDepth.py  plot_contours.py  plot_geometricalDepth.py  plot_halfDepth.py  plot_mahDepth.py  plot_multiDist.py  plot_potentialDepth.py  plot_projectionDepth.py  plot_qhpeelingDepth.py  plot_simplicialDepth.py  plot_simplicialVolDepth.py  plot_spatialDepth.py  plot_zonoidDepth.py
(+44 files in other folders)
